test/testdata/classes/methods/static/property_accessors/write_only_error.lox
class Foo {
  get bar() {}

  // error: write-only properties are not allowed
  // lint error: write-only properties are not allowed
  static set bar(value) {
    this._bar = value;
  }
}

_ = Foo;
